--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="row">
             <div class="col">
                 <ul id="character-list">
+                    <!-- <li>${this.question}</li>
+                    <li>${this.airdate}</li>
+                    <li>${this.answer}</li> -->
                     <!-- CHARACTERS INJECTED HERE -->
 
                 </ul>
